Fix spacing.

--- a/src/components/home/styles/Currently.sass
+++ b/src/components/home/styles/Currently.sass
@@ -17,6 +17,7 @@
     img 
       max-width: 20px;
       max-height: 20px;
+      margin: 0;
 
     div 
       padding-left: 0.525rem;
