--- a/src/components/home/styles/Home.sass
+++ b/src/components/home/styles/Home.sass
@@ -1,7 +1,6 @@
 @import '../../../assets/styles/variables.sass'
   
 .home-column-left
-  max-width: 200px;
   text-align: left;
 
   @media (max-width: $mobile-breakpoint)
@@ -41,6 +40,7 @@
 
     img 
       margin-bottom: 0;
+      border-radius: 2px;
       
       @media (max-width: $mobile-breakpoint)
         border-radius: 100%;
